update link images

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div class="container-fluid" style="margin-top: 50px;">
             <div class="row">
                 <div class="col-md-2">
-                    <a href="/categories/top-offers.html">
+                    <a href="categories/top-offers.html">
                         <img src="src/images/categories/topoffers.png" alt="images">
                         <span class="test">All</span>
                     </a>
