--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                                                 <div class="preview-image preview-show-1">
                                                     <div class="image-cancel" data-no="1">x</div>
                                                     <div class="image-zone"><img id="pro-img-1"
-                                                            src="src/images/vehicle/vehicle2-1.jpg"></div>
+                                                            src="src/images/preview.png"></div>
                                                     <div class="tools-edit-image"><a href="" data-no="1"
                                                             class="btn btn-light btn-edit-image">edit</a></div>
                                                 </div>
