--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -31,7 +30,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 </head>
-
 <body>
     <!-- Navbar for desktop -->
     <nav class="navbar fixed-top bg-white shadow-sm rounded">
@@ -95,9 +93,8 @@
                                 class="rounded-circle">
                         </a>
                         <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                            <li><a class="dropdown-item" href="#">New project...</a></li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
                             <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><a class="dropdown-item" href="#">Settings</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
@@ -274,10 +271,10 @@
             </header>
             <div class="py-4">
                 <div class="mb-4">
-                    <a href="#" class="remove-underline">
+                    <a href="index.html" class="remove-underline">
                         <div class="container-fluid p-5 rounded-3 fade-out"
                             style="background-image: url(resources/images/categories/fashion.jpg); background-position: center left; background-size: cover;">
-                            <h1 class="display-5 fw-bold text-white text-hover">Fashion</h1>
+                            <p class="fs-4 fw-bold text-white text-hover badge bg-danger"><i class="fas fa-tag"></i> Fashion</p>
                             <p class="col-md-8 fs-4 text-white">Clothing, footwear, lifestyle, accessories, makeup,...</p>
                         </div>
                     </a>
@@ -289,7 +286,7 @@
                         <a href="#" class="remove-underline">
                             <div class="h-100 p-5 text-white rounded-3 fade-out"
                                 style="background-image: url(resources/images/categories/electronic.jpg); background-position: center left; background-size: cover;">
-                                <h2 class="text-hover">Electronics</h2>
+                                <p class="fs-4 fw-bold text-white text-hover badge bg-warning"><i class="fas fa-tag"></i> Electronics</p>
                                 <p>Flatscreen TVs, television sets, MP3 players, video recorders, DVD players, radio
                                     receivers,...</p>
                             </div>
@@ -300,7 +297,7 @@
                         <a href="#" class="remove-underline">
                             <div class="h-100 p-5 rounded-3 fade-out"
                                 style="background-image: url(resources/images/categories/children.jpg); background-position: center left;background-size: cover;">
-                                <h2 class="text-white text-hover">Kids' Furniture</h2>
+                                <p class="fs-4 fw-bold text-white text-hover badge bg-info"><i class="fas fa-tag"></i> Kids' Furniture</p>
                                 <p class="text-white">Backpacks & Lunch Boxes, Bedding & Slumber Bags, Indoor Furniture,
                                     Outdoor Furniture</p>
                             </div>
@@ -312,7 +309,7 @@
                         <a href="#" class="remove-underline">
                             <div class="h-75 p-5 rounded-3 fade-out"
                                 style="background-image: url(resources/images/categories/household.jpg); background-position: center left;background-size: cover;">
-                                <h2 class="text-white text-hover">Household</h2>
+                                <p class="fs-4 fw-bold text-white text-hover badge bg-success"><i class="fas fa-tag"></i> Household</p>
                                 <p class="text-white">Kitchenware, furniture, clothing, bedding, books, tools,...</p>
                             </div>
                         </a>
@@ -321,7 +318,7 @@
                         <a href="#" class="remove-underline">
                             <div class="h-75 p-5 rounded-3 fade-out"
                                 style="background-image: url(resources/images/categories/vehicle.jpg); background-position: center left;background-size: cover;">
-                                <h2 class="text-white text-hover">Vehicle</h2>
+                                <p class="fs-4 fw-bold text-white text-hover badge bg-secondary"><i class="fas fa-tag"></i> Vehicle</p>
                                 <p class="text-white">Bicycles, motorcycles, cars, trucks,...</p>
                             </div>
                         </a>
@@ -330,7 +327,7 @@
                         <a href="#" class="remove-underline">
                             <div class="h-75 p-5 rounded-3 fade-out"
                                 style="background-image: url(resources/images/categories/all.jpg); background-position: center left;background-size: cover;">
-                                <h2 class="text-white text-hover">All</h2>
+                                <p class="fs-4 fw-bold text-white text-hover badge bg-primary"><i class="fas fa-tag"></i> All</p>
                                 <p class="text-white">Anything</p>
                             </div>
                         </a>
