--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                                 class="rounded-circle">
                         </a>
                         <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
+                            <li><a class="dropdown-item" href="profile.html">Profile</a></li>
+                            <li><a class="dropdown-item" href="#">My order</a></li>
+                            <li><a class="dropdown-item" href="#">My Timeline</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
